16052
=== What steps will reproduce the problem? ===
{code}
Welcome to Scala version 2.9.0.RC1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_22).
Type in expressions to have them evaluated.
Type :help for more information.

scala> { lazy val b = a; val a = 1 }
{code} 


=== What is the expected behavior? ===

{code}
Welcome to Scala version 2.8.1.final (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_22).
Type in expressions to have them evaluated.
Type :help for more information.

scala> { lazy val b = a; val a = 1} 
<console>:6: error: forward reference extends over definition of value a
       { lazy val b = a; val a = 1}
                      ^
{code}

Not sure if this change was intentional; but the spec still supports the 2.8.1 view of things.

=== What versions of the following are you using? ===
  - Scala: 2.9.0.RC1
